[package]
name = "vlc-exec"
version = "0.1.1"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2018"
description = "A program that starts vlc with all audio channels playing"
license = "MIT"
homepage = "https://github.com/Kl4rry/vlc-exec"
repository = "https://github.com/Kl4rry/vlc-exec"
keywords = ["cli", "vlc"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
winapi = "0.3.9"

[package.metadata.winres]
OriginalFilename = "vlc-exec.exe"
FileDescription = "vlc-exec"
LegalCopyright = "Copyright © 2021 Axel Kappel"
ProductName = "vlc-exec"
